--- a/README.Rmd
+++ b/README.Rmd
@@ -14,4 +14,4 @@ knitr::opts_chunk$set(
 
 # Course lectures and code for Stat 234
 
-These are my specific contributions to Stat 234.
+These are my specific contributions to Stat 234. See [here](https://dcgerard.github.io/Stat_234/) for the website.
