started numerical summaries

--- a/lectures/template.Rnw
+++ b/lectures/template.Rnw
@@ -9,12 +9,34 @@
 \renewcommand{\code}[1]{{\color{blue!80!black}\texttt{#1}}}
 
 
-\title{Lecture}
+\title{Describing Shapes of Quantitative Variables with Histograms}
 \author{David Gerard}
 \date[\Sexpr{Sys.Date()}]{\Sexpr{Sys.Date()}}
 
 
 \begin{document}
+
+<<setup, include=FALSE, cache=FALSE>>=
+options(format.R.blank=FALSE)
+options(width=60)
+options(continue=" ")
+options(replace.assign=TRUE)
+options(scipen=8, digits=4)
+opts_chunk$set(
+  dev="pdf",
+  fig.align='center',
+  fig.width=7,
+  fig.height=4,
+  fig.pos='H',
+  fig.show='asis',
+  out.width='0.99\\linewidth',
+  par=TRUE,
+  tidy=FALSE,
+  tidy.opts=list(width.cutoff=50),
+  prompt=FALSE,
+  comment=NA
+)
+@
 
 \begin{frame}[fragile]
   \titlepage
